Bug 482670 - On X11, Move To Desktop -> All Desktops does not work
Summary: On X11, Move To Desktop -> All Desktops does not work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-07 09:09 UTC by András Manţia
Modified: 2024-03-09 00:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2024-03-07 09:09:02 UTC
SUMMARY
Move To Desktop -> All Desktops does not move the window to all desktops.

STEPS TO REPRODUCE
1.  Set up two desktops
2.  Switch to Desktop 2
3.  Start an app
4. In the taskbar right click to it and select Move To Desktop -> All Desktops

OBSERVED RESULT
The app remains only on Desktop 2

EXPECTED RESULT
The app should be on all desktops

ADDITIONAL INFORMATION
Move to -> Desktop 1 still works.
Comment 1 Nate Graham 2024-03-07 19:43:53 UTC
Works for me with those steps; cannot reproduce the issue.

I'm on Wayland; are you as well?
Comment 2 Bug Janitor Service 2024-03-07 22:28:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5383
Comment 3 András Manţia 2024-03-08 07:47:19 UTC
I am on X11
Comment 4 Vlad Zahorodnii 2024-03-08 08:30:19 UTC
Git commit 7078f4e3af49dcc6626f8fb070d690afe5d0b4bc by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 08/03/2024 at 08:21.
Pushed by vladz into branch 'master'.

Fix sending window to all desktops

NET::OnAllDesktops is a special desktop number (-1), desktopForX11Id will not return a desktop for it

When all desktops are requested pass an empty desktop list, the following code will handle it appropriately

M  +3    -1    src/netinfo.cpp

https://invent.kde.org/plasma/kwin/-/commit/7078f4e3af49dcc6626f8fb070d690afe5d0b4bc
Comment 5 Vlad Zahorodnii 2024-03-08 08:45:09 UTC
Git commit dbf1edcc4185819aae95fcb3d078574ce2019f67 by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 08/03/2024 at 08:32.
Pushed by vladz into branch 'Plasma/6.0'.

Fix sending window to all desktops

NET::OnAllDesktops is a special desktop number (-1), desktopForX11Id will not return a desktop for it

When all desktops are requested pass an empty desktop list, the following code will handle it appropriately


(cherry picked from commit 7078f4e3af49dcc6626f8fb070d690afe5d0b4bc)

M  +3    -1    src/netinfo.cpp

https://invent.kde.org/plasma/kwin/-/commit/dbf1edcc4185819aae95fcb3d078574ce2019f67