Fix sending window to all desktops

NET::OnAllDesktops is a special desktop number (-1), desktopForX11Id will not return a desktop for it

When all desktops are requested pass an empty desktop list, the following code will handle it appropriately

BUG: 482670


(cherry picked from commit 7078f4e3af49dcc6626f8fb070d690afe5d0b4bc)